--- a/style.css
+++ b/style.css
@@ -39,26 +39,6 @@
   font-family: var(--font-primary);
 }
 
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: white;
-  z-index: 1000;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-}
-
-#header-logo {
-  width: 7rem;
-}
-
-header div {
-  display: flex;
-}
-
 body {
   display: flex;
   flex-direction: row;
@@ -66,25 +46,162 @@ body {
   overflow-y: scroll;
 }
 
-main {
-  margin-left: 10rem;
+/* HEADER SETTINGS */
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: white;
+  z-index: 1000;
+  padding: 0.7rem 1rem;
   display: flex;
-  flex: 1;
-  flex-direction: column;
-  padding: 5rem 2rem 0 2rem;
+  justify-content: space-between;
 }
 
+#header-logo {
+  width: 8rem;
+  padding: 0.5rem;
+}
+
+header div {
+  display: flex;
+  align-items: center;
+}
+
+#menu-icon {
+  font-size: 2rem;
+  color: var(--gray-dark-color);
+  --ionicon-stroke-width: 42px;
+}
+
+#searchbar {
+  background-color: var(--gray-light-color);
+  border-radius: 10px;
+  padding: 0 0.5rem;
+  width: 20rem;
+}
+
+#search-icon {
+  color: var(--gray-dark-color);
+  --ionicon-stroke-width: 52px;
+  font-size: 1.2rem;
+}
+
+#searchbar input {
+  border: none;
+  background-color: transparent;
+  margin-left: 0.6rem;
+  font-size: 0.8rem;
+  height: 2.5rem;
+  width: 100%;
+  outline: none;
+}
+
+#searchbar input:focus,
+#searchbar input:active {
+  outline: none;
+  box-shadow: none;
+}
+
+#add-icon {
+  color: white;
+  --ionicon-stroke-width: 32px;
+  font-size: 2rem;
+  background-color: var(--primary-color);
+  border-radius: 10px;
+  padding: 0.2rem;
+  margin-right: 1rem;
+}
+
+#add-icon p {
+  font-size: 0.8rem;
+  margin: 0 1rem 0 0.2rem;
+}
+
+#profile-icon {
+  color: var(--gray-dark-color);
+  --ionicon-stroke-width: 52px;
+  font-size: 3rem;
+}
+
+/* NAVBAR SETTINGS*/
 nav {
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
-  width: 10rem;
+  width: auto;
   padding: 5rem 1rem 0 1rem;
   background: white;
   z-index: 100;
+  color: var(--gray-dark-color);
+  font-size: 0.8rem;
+}
+
+nav > div {
+  margin-bottom: 2rem;
+}
+
+ul {
+  margin-top: 1rem;
 }
 
 li {
   list-style: none;
+  padding: 0.7rem;
+  margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  background-color: var(--secondary-color);
+  border-radius: 10px;
+}
+
+.nav-icon {
+  font-size: 1.3rem;
+  --ionicon-stroke-width: 42px;
+}
+
+.collapse {
+  font-weight: 700;
+  display: flex;
+  margin: 0 3rem 0 1rem;
+}
+
+/* CONTENT SETTING */
+
+main {
+  margin-left: 15rem;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 8rem 2rem 0 2rem;
+}
+
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+  width: 100%;
+  padding: 0 2rem;
+}
+
+/* SECTION SETTINGS */
+
+section {
+  margin: 2rem 0;
+}
+.section-body {
+  display: flex;
+  height: auto;
+  margin-top: 1rem;
+}
+
+.card {
+  flex: 1;
+  border-radius: 10px;
+  height: 200px;
+  border: 2px solid var(--gray-light-color);
+  background-color: white;
+  margin-right: 1rem;
 }
