--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 :root {
   --background-color: #f0f5f9;
   --primary-color: #4255ff;
@@ -7,6 +7,7 @@
   --gray-dark-color: #586380;
   --gray-light-color: #edeff4;
   --font-primary: "Inter", "Inter Fallback";
+  --font-secondary: "Montserrat", sans-serif;
 }
 
 /* SCROLLBAR SETTINGS */
@@ -36,7 +37,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: var(--font-primary);
 }
 
 body {
@@ -44,10 +44,15 @@ body {
   flex-direction: row;
   background-color: var(--background-color);
   overflow-y: scroll;
+  font-family: var(--font-secondary);
 }
 
 h1 {
   font-size: 2.5rem;
+}
+
+p {
+  font-size: 0.8rem;
 }
 
 /* NAVBAR SETTINGS*/
@@ -267,19 +272,126 @@ section {
   margin: 2rem 0;
 }
 
-.section-body {
-  display: flex;
-  height: auto;
-  margin-top: 1rem;
-}
-
 .card {
   flex: 1;
   border-radius: 10px;
   height: 200px;
+  min-width: 24rem;
   border: 2px solid var(--gray-light-color);
   background-color: white;
-  margin-right: 1rem;
+  transition: border-bottom 0.3s ease, opacity 0.3s ease;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  font-family: var(--font-secondary) !important;
+  cursor: pointer;
+}
+
+.card-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card-title div {
+  background-color: var(--secondary-color);
+  color: var(--gray-dark-color);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 0 0.5rem;
+}
+
+.card-description {
+  flex: 1;
+  color: var(--gray-dark-color);
+  margin: 1rem 0;
+  scrollbar-width: none;
+
+  position: relative;
+  overflow: hidden;
+}
+
+.fade-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 70%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+
+.card-author {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-weight: 600;
+}
+
+.card-author ion-icon {
+  font-size: 1.7rem;
+  margin-right: 0.3rem;
+}
+
+.card:hover {
+  border-bottom-width: 0.5rem;
+  border-bottom-color: var(--primary-color);
+}
+
+.carousel-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.section-body {
+  display: flex;
+  height: auto;
+  overflow-x: auto;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  gap: 2rem;
+  flex: 1;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  color: var(--gray-dark-color);
+  border: none;
+  padding: 10px;
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 10;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+.carousel-container:hover .carousel-button {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+#suggested-section {
+  overflow-x: hidden;
 }
 
 /* ADD CARD PAGE SETTINGS */
