--- a/style.css
+++ b/style.css
@@ -390,7 +390,8 @@ section {
   right: 0;
 }
 
-#suggested-section {
+#suggested-section,
+#popular-questions-section {
   overflow-x: hidden;
 }
 
@@ -529,4 +530,123 @@ textarea {
 
 .input-item-header div:hover {
   background-color: var(--background-color);
+}
+
+/* QUIZ PAGE */
+
+#flashcard-board {
+  height: 27rem;
+  background-color: transparent;
+  margin: 1rem 0;
+  overflow-y: scroll;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  scrollbar-width: none;
+  padding: 1rem;
+}
+
+#flashcard-board p {
+  font-size: 3rem;
+}
+
+#quiz-reviews {
+  display: flex;
+  align-items: flex-end;
+}
+
+#quiz-reviews ion-icon {
+  color: #ffcc1c;
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+}
+
+#quiz-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.page-indicator {
+  display: flex;
+}
+.flash {
+  padding: 0.5rem 2rem;
+  border-radius: 1rem;
+  color: var(--gray-dark-color);
+  border: 3px solid var(--gray-light-color);
+  margin: 0 1rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.indicator {
+  margin: 1.5rem 0;
+}
+.line-indicator-light {
+  background-color: var(--gray-light-color);
+  width: 100%;
+  height: 0.1rem;
+}
+
+.line-indicator-dark {
+  background-color: var(--gray-dark-color);
+  width: 50%;
+  height: 100%;
+}
+
+.author-container {
+  display: flex;
+}
+
+.author-profile {
+  width: 2rem;
+  height: 2rem;
+}
+
+.author-name {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.2rem 0.4rem;
+  font-size: 0.8rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.flipper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d; /* Preserves the 3D space for both sides */
+  transition: transform 1s;
+  box-shadow: 0.3rem 0.3rem 0.5rem gray,
+    -0.3rem -0.3rem 0.5rem var(--secondary-color);
+  border-radius: 1rem;
+  background-color: white;
+}
+
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; /* Hides the back side when flipped */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+.flip-container.flipped .flipper {
+  transform: rotateY(180deg);
 }
