--- a/style.css
+++ b/style.css
@@ -267,6 +267,55 @@ main {
   padding: 0 2rem;
 }
 
+/* SEARCH RESULTS SETTINGS */
+#search-results {
+  position: fixed;
+  top: 5rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  height: auto;
+  width: 35rem;
+  z-index: 1000;
+  margin: auto 50vw;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0.3rem 0.3rem 0.5rem gray,
+    -0.3rem -0.3rem 0.5rem var(--secondary-color);
+}
+
+#search-results span {
+  padding: 0.5rem;
+  width: 100%;
+}
+
+#search-results span:hover {
+  background-color: var(--secondary-color);
+}
+
+/* FOOTER */
+
+footer {
+  border-top: 2px solid var(--secondary-color);
+  padding-top: 2rem;
+}
+
+footer li {
+  background-color: transparent;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
 /* SECTION SETTINGS */
 
 section {
@@ -615,7 +664,7 @@ textarea {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .flipper {
@@ -717,6 +766,24 @@ textarea {
   .flip-container {
     margin-top: 0;
   }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-section,
+  .footer-section ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #search-results {
+    width: 25rem;
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 600px) {
@@ -738,6 +805,11 @@ textarea {
     padding-left: 1rem;
     padding-right: 1rem;
   }
+
+  #search-results {
+    width: 17rem;
+    font-size: 0.8rem;
+  }
 }
 
 @media (max-width: 450px) {
@@ -752,10 +824,20 @@ textarea {
   #searchbar {
     width: 8rem;
   }
+
+  #search-results {
+    width: 10rem;
+    font-size: 0.7rem;
+  }
 }
 
 @media (max-width: 350px) {
   #add-icon {
     margin-right: 0;
+  }
+
+  #search-results {
+    width: 5rem;
+    font-size: 0.5rem;
   }
 }
